# fastBE

./: .gitignore  .gitmodules  CMakeLists.txt  MatrixIdentities.nb  README.md
.github/workflows/: build.yml
data/: README.md
data/input/: CSC28.params.json  CSC28.ssm  POP66.params.json  POP66.ssm  SJBALL022609.hbstruct.params.json  SJBALL022609.params.json  SJBALL022609.ssm  SJBALL022610.ssm  (+53 more)
examples/: B_matrix.csv  B_tree.newick  B_tree_adjlist.txt  f_vector.csv  sim_clonal_matrix.txt  sim_collapsed_total_matrix.txt  sim_collapsed_variant_matrix.txt  sim_mutation_to_clone_mapping.txt  sim_obs_frequency_matrix.txt  sim_obs_full_frequency_matrix.txt  sim_total_matrix.txt  sim_tree.txt  sim_usage_matrix.txt  sim_variant_matrix.txt
include/: digraph.hpp  fastbe.hpp  fastbe.hpp.in  piecewiselinearf.hpp  piecewisequadraticf.hpp  vafpp.hpp  vafpp.hpp.in
notebooks/: MatrixIdentities.nb  ball_realdata.ipynb  jupyter.sbatch
notes/: notes.aux  notes.bbl  notes.blg  notes.fdb_latexmk  notes.fls  notes.out  notes.tex  references.bib
paper/: main.tex  references.bib
scripts/: edgelist_to_pairtree_scoring_input.py  jupyter.sbatch  make_calder_input.py  make_citup_input.py  make_pairtree_input.py  parse_calder_output.py  parse_pairtree_output.py  piecewise_linear.py  process_timing_results.py  regression_lp.py  score_result.py  simulate_imperfect_phylogeny.py  simulation.py  summarize_benchmarks.py  summarize_evaluations.py  vafpp_lp.py
src/: CMakeLists.txt  fastbe.cxx  piecewise_linear.py  vafpp.cxx  vafpp_lp.py
tests/: CMakeLists.txt  piecewiselinearf_tests.cpp
(+223 files in other folders)
